Started index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-Test One Two Three Four
+<!doctype html>
+<html>
+<head>
+    <title>DreamOffer</title>
+    <meta name="Job Application Data Storage" content="Landing page">
+</head>
+
+<body>
+    <a href="#">Applicants</a>
+    <a href="#">Applications</a>
+    <a href="#">Companies</a>
+    <a href="#">Positions</a>
+    <a href="#">Recruiters</a>
+    <h2>Every offer started as a dream.</h2>
+    <p>When applying for internships/jobs, Computer Science students may find 
+        themselves sending out hundreds of applications. DreamOffer, a 
+        “Job Application Tracking” database driven web application, helps 
+        applicants keep track of where they have applied already and when their 
+        applications were sent in an organized and simple to use system. 
+        DreamOffer stores data for hundreds of applicants from various backgrounds. 
+        It also stores data for thousands of different applications for hundreds 
+        of companies, and there is still room for growth in these numbers. When 
+        Applicants record new Applications with our database, they record which 
+        Positions at which Companies they applied for, and who the CompanyRecruiters
+        are for those Positions.
+    </p>
+
+</body>
+</html>
