--- a/applications_crud.html
+++ b/applications_crud.html
@@ -8,6 +8,14 @@
     <title>Applications</title>
 </head>
 <body>
+
+    <h1>Applications</h1>
+
+    <a href="applicants_crud.html">Applicants</a>
+    <span>Applications</span>
+    <a href="companies_crud.html">Companies</a>
+    <a href="positions_crud.html">Positions</a>
+    <a href="companyrecruiters_crud.html">Recruiters</a>
     
 </body>
 </html>
