Added index.html meat, including page descriptions

--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
 </head>
 
 <body>
-    <a href="#">Applicants</a>
-    <a href="#">Applications</a>
-    <a href="#">Companies</a>
-    <a href="#">Positions</a>
-    <a href="#">Recruiters</a>
+
+    <h1>DreamOffer</h1>
+
+    <a href="applicants_crud.html">Applicants</a> |
+    <a href="applications_crud.html">Applications</a> |
+    <a href="companies_crud.html">Companies</a> |
+    <a href="positions_crud.html">Positions</a> |
+    <a href="positionscompanyrecruiters_crud.html">Positions Company Recruiters</a> |
+    <a href="companyrecruiters_crud.html">Recruiters</a>
+
     <h2>Every offer started as a dream.</h2>
+
     <p>When applying for internships/jobs, Computer Science students may find 
         themselves sending out hundreds of applications. DreamOffer, a 
         “Job Application Tracking” database driven web application, helps 
@@ -25,5 +31,14 @@
         are for those Positions.
     </p>
 
+    <h3>Pages/Entities</h3>
+    <ul>
+        <li><strong>Applicants</strong> - records the personal details of each Applicant.</li>
+        <li><strong>Applications</strong> - records the details of every Application Applicants use to apply to specific Positions.</li>
+        <li><strong>Companies</strong> - records the details of each Company Applicants apply to.</li>
+        <li><strong>Positions</strong> - records the details of specific Position/job posting Applicants apply to.</li>
+        <li><strong>Positions Company Recruiters</strong> - shows a list of Positions and their associated Recruiters.</li>
+        <li><strong>Company Recruiter</strong> - records the personal details of each Company Recruiter for specific Positions.</li>
+    </ul>
 </body>
 </html>
