Fixed typo in description paragraph

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <p>When applying for internships/jobs, Computer Science students may find 
         themselves sending out hundreds of applications. DreamOffer, a 
-        “Job Application Tracking” database driven web application, helps 
+        Job Application Tracking database driven web application, helps 
         applicants keep track of where they have applied already and when their 
         applications were sent in an organized and simple to use system. 
         DreamOffer stores data for hundreds of applicants from various backgrounds. 
