add table head and a single row

--- a/applications_crud.html
+++ b/applications_crud.html
@@ -11,11 +11,38 @@
 
     <h1>Applications</h1>
 
-    <a href="applicants_crud.html">Applicants</a>
-    <span>Applications</span>
-    <a href="companies_crud.html">Companies</a>
-    <a href="positions_crud.html">Positions</a>
+    <a href="applicants_crud.html">Applicants</a> |
+    <span>Applications</span> |
+    <a href="companies_crud.html">Companies</a> |
+    <a href="positions_crud.html">Positions</a> |
     <a href="companyrecruiters_crud.html">Recruiters</a>
+
+    <h3>Browse Applications</h3>
+    <table>
+        <!-- Table Head -->
+        <tr>
+            <th><a href="#" id="new-btn">New</a></th>
+            <th></th>
+            <th>ID</th>
+            <th>Date Applied</th>
+            <th>Result</th>
+            <th>Result Date</th>
+            <th>Applicant</th>
+            <th>Position</th>
+        </tr>
+
+        <!-- Table rows -->
+        <tr>
+            <td><a href="#" class="edit-btn">Edit</a></td>
+            <td><a href="#" class="delete-btn">Delete</a></td>
+            <td>001</td>
+            <td>2022-06-04</td>
+            <td>Rejected</td>
+            <td>2022-06-29</td>
+            <td>Jeff Johnson</td>
+            <td>Data Engineer Intern</td>
+          </tr>
+    </table>
     
 </body>
 </html>
