add rows to table

--- a/applications_crud.html
+++ b/applications_crud.html
@@ -37,11 +37,31 @@
             <td><a href="#" class="delete-btn">Delete</a></td>
             <td>001</td>
             <td>2022-06-04</td>
-            <td>Rejected</td>
+            <td>Rejection</td>
             <td>2022-06-29</td>
             <td>Jeff Johnson</td>
             <td>Data Engineer Intern</td>
-          </tr>
+        </tr>
+        <tr>
+            <td><a href="#" class="edit-btn">Edit</a></td>
+            <td><a href="#" class="delete-btn">Delete</a></td>
+            <td>002</td>
+            <td>2022-07-15</td>
+            <td>Offer</td>
+            <td>2022-10-18</td>
+            <td>Xochit Lowe</td>
+            <td>Software Engineer Intern</td>
+        </tr>
+        <tr>
+            <td><a href="#" class="edit-btn">Edit</a></td>
+            <td><a href="#" class="delete-btn">Delete</a></td>
+            <td>003</td>
+            <td>2022-12-30</td>
+            <td>Rejection</td>
+            <td>2022-05-30</td>
+            <td>Taya Howard</td>
+            <td>Database Administrator</td>
+        </tr>
     </table>
     
 </body>
