add the rest of rows to table

--- a/applications_crud.html
+++ b/applications_crud.html
@@ -62,6 +62,26 @@
             <td>Taya Howard</td>
             <td>Database Administrator</td>
         </tr>
+        <tr>
+            <td><a href="#" class="edit-btn">Edit</a></td>
+            <td><a href="#" class="delete-btn">Delete</a></td>
+            <td>004</td>
+            <td>2022-10-01</td>
+            <td>In Process</td>
+            <td>NULL</td>
+            <td>John Seward</td>
+            <td>Database Administrator</td>
+        </tr>
+        <tr>
+            <td><a href="#" class="edit-btn">Edit</a></td>
+            <td><a href="#" class="delete-btn">Delete</a></td>
+            <td>005</td>
+            <td>2022-09-23</td>
+            <td>Submitted</td>
+            <td>NULL</td>
+            <td>Jeff Johnson</td>
+            <td>Application Developer</td>
+        </tr>
     </table>
     
 </body>
