add empty default value to date input

--- a/applications_crud.html
+++ b/applications_crud.html
@@ -99,7 +99,7 @@
             <option value="005">Xochit Lowe</option>
           </select>
           <label for="position">Position</label> <input type="text" name="position" />
-          <label for="dateApplied">Date Applied</label> <input type="date" name="dateApplied" />
+          <label for="dateApplied">Date Applied</label> <input type="date" name="dateApplied" value="" />
         </fieldset>
         <button type="submit">Add Application</button>
         <button id="add-cancel">Cancel</button>
