Fixed typo in index.html, added mean of positions_crud.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <h1>DreamOffer</h1>
 
+    <span>Home</span>
     <a href="applicants_crud.html">Applicants</a> |
     <a href="applications_crud.html">Applications</a> |
     <a href="companies_crud.html">Companies</a> |
@@ -16,7 +17,7 @@
     <a href="positionscompanyrecruiters_crud.html">Positions Company Recruiters</a> |
     <a href="companyrecruiters_crud.html">Recruiters</a>
 
-    <h2>Every offer started as a dream.</h2>
+    <h2>Every offer starts as a dream.</h2>
 
     <p>When applying for internships/jobs, Computer Science students may find 
         themselves sending out hundreds of applications. DreamOffer, a 
