add link to home page

--- a/applicants_crud.html
+++ b/applicants_crud.html
@@ -11,6 +11,7 @@
     
     <h1>Applicants</h1>
     
+    <a href="index.html">Home</a> |
     <span>Applicants</span> |
     <a href="applications_crud.html">Applications</a> |
     <a href="companies_crud.html">Companies</a> |
