--- a/applications_crud.html
+++ b/applications_crud.html
@@ -11,6 +11,7 @@
 
     <h1>Applications</h1>
 
+    <a href="index.html">Home</a> |
     <a href="applicants_crud.html">Applicants</a> |
     <span>Applications</span> |
     <a href="companies_crud.html">Companies</a> |
