add title, links, and table

--- a/companies_crud.html
+++ b/companies_crud.html
@@ -8,6 +8,38 @@
     <title>Companies</title>
 </head>
 <body>
+
+    <h1>Companies</h1>
+
+    <a href="index.html">Home</a> |
+    <a href="applicants_crud.html">Applicants</a> |
+    <a href="applications_crud.html">Applications</a> |
+    <span>Companies</span> |
+    <a href="positions_crud.html">Positions</a> |
+    <a href="companyrecruiters_crud.html">Recruiters</a>
+
+    <h3>Browse Companies</h3>
+    <table>
+        <!-- Table Head -->
+        <tr>
+            <th><a href="#" id="new-btn">New</a></th>
+            <th></th>
+            <th>ID</th>
+            <th>Name</th>
+            <th>Description</th>
+            <th>Website</th>
+        </tr>
+
+        <!-- Table rows -->
+        <tr>
+            <td><a href="#" class="edit-btn">Edit</a></td>
+            <td><a href="#" class="delete-btn">Delete</a></td>
+            <td>100</td>
+            <td>Aptiv</td>
+            <td>Global tech company that develops safer, greener solutions which enable future of mobility.</td>
+            <td><a href="https://www.aptiv.com/">aptiv.com</a></td>
+        </tr>
+    </table>
     
 </body>
 </html>
