add row to table

--- a/companies_crud.html
+++ b/companies_crud.html
@@ -39,6 +39,14 @@
             <td>Global tech company that develops safer, greener solutions which enable future of mobility.</td>
             <td><a href="https://www.aptiv.com/">aptiv.com</a></td>
         </tr>
+        <tr>
+            <td><a href="#" class="edit-btn">Edit</a></td>
+            <td><a href="#" class="delete-btn">Delete</a></td>
+            <td>101</td>
+            <td>Garmin</td>
+            <td>GPS tech company that creates navigation and communication products.</td>
+            <td><a href="https://www.garmin.com/">garmin.com</a></td>
+        </tr>
     </table>
     
 </body>
