add form for adding company

--- a/companies_crud.html
+++ b/companies_crud.html
@@ -47,7 +47,27 @@
             <td>GPS tech company that creates navigation and communication products.</td>
             <td><a href="https://www.garmin.com/">garmin.com</a></td>
         </tr>
+        <tr>
+            <td><a href="#" class="edit-btn">Edit</a></td>
+            <td><a href="#" class="delete-btn">Delete</a></td>
+            <td>102</td>
+            <td>Apple</td>
+            <td>Hardware & software for personal computers, phones, tablets, etc.</td>
+            <td><a href="https://www.apple.com/">apple.com</a></td>
+        </tr>
     </table>
+
+        <!-- Add Company Form -->
+        <form action="#" id="add">
+            <legend><strong>Add Company</strong></legend>
+            <fieldset>
+              <label for="company">Company</label> <input type="text" name="company" />
+              <label for="website">Website</label> <input type="url" name="website" value="" />
+              <label for="description">Description</label> <input type="text" name="description" />
+            </fieldset>
+            <button type="submit">Add Company</button>
+            <button id="add-cancel">Cancel</button>
+        </form>
     
 </body>
 </html>
