Added Recruiter Add and Position AND Recruiter add tables to Postions

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <h1>DreamOffer</h1>
 
-    <span>Home</span>
+    <span>Home</span> |
     <a href="applicants_crud.html">Applicants</a> |
     <a href="applications_crud.html">Applications</a> |
     <a href="companies_crud.html">Companies</a> |
