edit title of update form

--- a/companies_crud.html
+++ b/companies_crud.html
@@ -72,7 +72,7 @@
 
     <!-- Update Applicant Form -->
     <form action="#" id="update">
-        <legend><strong>Update Applicant</strong></legend>
+        <legend><strong>Update Company</strong></legend>
         <fieldset>
             <label>ID: <span>102</span></label>
             <label for="company">Company</label> 
