Updated permissions for all files

--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
     <a href="applicants_crud.html">Applicants</a> |
     <a href="applications_crud.html">Applications</a> |
     <a href="companies_crud.html">Companies</a> |
-    <a href="positions_crud.html">Positions</a> |
-    <a href="positionscompanyrecruiters_crud.html">Positions Company Recruiters</a> |
-    <a href="companyrecruiters_crud.html">Recruiters</a>
+    <a href="positionscompanyrecruiters_crud.html">Positions & Company Recruiters</a>
 
     <h2>Every offer starts as a dream.</h2>
 
