add search form

--- a/applications_crud.html
+++ b/applications_crud.html
@@ -86,6 +86,39 @@
     </table>
 
     <p>&nbsp;</p>
+
+    <!-- Search Applications -->
+    <form action="#" id="search">
+        <legend><strong>Search Applications</strong></legend>
+        <fieldset>
+            <label for="applicant-names">Applicant Name</label>
+            <select name="applicant-names" id="applicant-names">
+                <option value="001" selected>Jeff Johnson</option>
+                <option value="002">Taya Howard</option>
+                <option value="003">Elise McKinley</option>
+                <option value="004">John Seward</option>
+                <option value="005">Xochit Lowe</option>
+            </select>
+            <label for="applicant-email">Applicant Email</label>
+            <input type="email" name="applicant-email" />
+            <h4>Optional: </h3>
+            <label for="positions">Position</label>
+            <select name="positions" id="positions">
+                <option value="200" selected>Software Engineer Intern</option>
+                <option value="201">Application Developer</option>
+                <option value="202">New Grad SWE</option>
+                <option value="203">Data Engineer Intern</option>
+                <option value="204">Database Administrator</option>
+            </select>
+            <label for="companies">Company</label>
+            <select name="companies" id="companies">
+                <option value="100" selected>Aptiv</option>
+                <option value="101">Garmin</option>
+                <option value="102">Apple</option>
+            </select>
+        </fieldset>
+        <button type="submit">Search Applications</button>
+    </form>
     
     <!-- Add Application Form -->
     <form action="#" id="add">
