Updated nav for pages

--- a/applications_crud.html
+++ b/applications_crud.html
@@ -15,8 +15,8 @@
     <a href="applicants_crud.html">Applicants</a> |
     <span>Applications</span> |
     <a href="companies_crud.html">Companies</a> |
-    <a href="positions_crud.html">Positions</a> |
-    <a href="companyrecruiters_crud.html">Recruiters</a>
+    <a href="positionscompanyrecruiters_crud.html">Positions & Company Recruiters</a>
+
 
     <h3>Browse Applications</h3>
     <table>
