Fixed typo I did in nav

--- a/companies_crud.html
+++ b/companies_crud.html
@@ -14,7 +14,7 @@
     <a href="index.html">Home</a> |
     <a href="applicants_crud.html">Applicants</a> |
     <a href="applications_crud.html">Applications</a> |
-    <span>Companies</span>
+    <span>Companies</span> |
     <a href="positionscompanyrecruiters_crud.html">Positions & Company Recruiters</a>
 
     <h3>Browse Companies</h3>
