Added Positions and Company to Recruiters table

--- a/positionscompanyrecruiters_crud.html
+++ b/positionscompanyrecruiters_crud.html
@@ -103,6 +103,8 @@
         <th>LinkedIn</th>
         <th>Last Contacted</th>
         <th>Details</th>
+        <th>Positions</th>
+        <th>Company</th>
       </tr>
       
       <!-- Table rows -->
@@ -115,6 +117,8 @@
         <td><a href="#">LinkedIn</td>
         <td>10-01-2022</td>
         <td>Met at OSU Career Fair</td>
+        <td>Software Engineer Intern</td>
+        <td>Aptiv</td>
       </tr>
       <tr>
         <td><a href="#" class="edit-btn">Edit</a></td>
@@ -125,6 +129,8 @@
         <td><a href="#">LinkedIn</td>
         <td>09-29-2022</td>
         <td>NULL</td>
+        <td>New Grad SWE, Database Administrator</td>
+        <td>Garmin</td>
       </tr>
       <tr>
         <td><a href="#" class="edit-btn">Edit</a></td>
@@ -135,6 +141,8 @@
         <td><a href="#">LinkedIn</td>
         <td>NULL</td>
         <td>Reached out on LinkedIn</td>
+        <td>NULL</td>
+        <td>NULL</td>
       </tr>
       <tr>
         <td><a href="#" class="edit-btn">Edit</a></td>
@@ -145,6 +153,8 @@
         <td>NULL</td>
         <td>NULL</td>
         <td>NULL</td>
+        <td>Software Engineer Intern</td>
+        <td>Aptiv</td>
       </tr>
     </table>
     
