change fname and lname inputs to just name

--- a/applicants_crud.html
+++ b/applicants_crud.html
@@ -79,8 +79,7 @@
     <form action="#" id="add">
       <legend><strong>Add Applicant</strong></legend>
       <fieldset>
-        <label for="fname">First name</label> <input type="text" name="fname" />
-        <label for="lname">Last name</label> <input type="text" name="lname" />
+        <label for="name">Name</label> <input type="text" name="name" />
         <label for="email">Email</label> <input type="email" name="email" />
       </fieldset>
       <button type="submit">Add Applicant</button>
@@ -92,10 +91,8 @@
       <legend><strong>Update Applicant</strong></legend>
       <fieldset>
         <label>ID: <span>001</span></label>
-        <label for="fname">First name</label> 
-        <input type="text" name="fname" value="Jeff"/>
-        <label for="lname">Last name</label> 
-        <input type="text" name="lname" value="Johnson"/>
+        <label for="name">Name</label> 
+        <input type="text" name="name" value="Jeff Johnson"/>
         <label for="email">Email</label> 
         <input type="email" name="email" value="jjohnson@gmail.com"/>
       </fieldset>
