Added search functionality

--- a/positionscompanyrecruiters_crud.html
+++ b/positionscompanyrecruiters_crud.html
@@ -204,6 +204,36 @@
     </table>
     
     <p>&nbsp;</p>
+
+    <!-- Search Positions by Company -->
+    <form action="#" id="search">
+      <legend><strong>Search Positions by Company</strong></legend>
+      <fieldset>
+          <label for="company-names">Company Name</label>
+          <select name="company-names" id="company-names">
+              <option value="100" selected>Aptiv</option>
+              <option value="101">Garmin</option>
+              <option value="102">Apple</option>
+          </select>
+      </fieldset>
+      <button type="submit">Search Positions</button>
+    </form>
+
+    <!-- Search Positions by Title -->
+    <form action="#" id="search">
+      <legend><strong>Search Positions by Title</strong></legend>
+      <fieldset>
+          <label for="title">Position Title</label>
+          <select name="title" id="title">
+              <option value="200" selected>Software Engineer Intern</option>
+              <option value="201">Application Developer</option>
+              <option value="202">New Grad SWE</option>
+              <option value="203">Data Engineer Intern</option>
+              <option value="204">Database Administrator</option>
+          </select>
+      </fieldset>
+      <button type="submit">Search Positions</button>
+    </form>
     
     <!-- Add Position Form -->
     <form action="#" id="add">
