Updated company dropdown in Add

--- a/positionscompanyrecruiters_crud.html
+++ b/positionscompanyrecruiters_crud.html
@@ -239,7 +239,12 @@
     <form action="#" id="add">
       <legend><strong>Add Position</strong></legend>
       <fieldset>
-        <label for="company">Company</label> <input type="text" name="company" />
+        <label for="company-names">Company Name</label>
+          <select name="company-names" id="company-names">
+              <option value="100" selected>Aptiv</option>
+              <option value="101">Garmin</option>
+              <option value="102">Apple</option>
+          </select>
         <label for="title">Title</label> <input type="text" name="title" />
         <label for="location">Location</label> <input type="text" name="location" />
         <label for="salary">Salary</label> <input type="number" name="salary" />
@@ -253,7 +258,12 @@
     <form action="#" id="add">
         <legend><strong>Add Position and Recruiter</strong></legend>
         <fieldset>
-          <label for="company">Company</label> <input type="text" name="company" />
+          <label for="company-names">Company Name</label>
+          <select name="company-names" id="company-names">
+              <option value="100" selected>Aptiv</option>
+              <option value="101">Garmin</option>
+              <option value="102">Apple</option>
+          </select>
           <label for="title">Title</label> <input type="text" name="title" />
           <label for="location">Location</label> <input type="text" name="location" />
           <label for="salary">Salary</label> <input type="number" name="salary" />
