Updated pages descriptions on index

--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
         <li><strong>Applicants</strong> - records the personal details of each Applicant.</li>
         <li><strong>Applications</strong> - records the details of every Application Applicants use to apply to specific Positions.</li>
         <li><strong>Companies</strong> - records the details of each Company Applicants apply to.</li>
-        <li><strong>Positions</strong> - records the details of specific Position/job posting Applicants apply to.</li>
-        <li><strong>Positions Company Recruiters</strong> - shows a list of Positions and their associated Recruiters.</li>
-        <li><strong>Company Recruiter</strong> - records the personal details of each Company Recruiter for specific Positions.</li>
+        <li><strong>Positions & Company Recruiters</strong> - records the details of Positions/job postings Applicants apply to. Also records the personal details of each Company Recruiter and what Positions they recruit for.</li>
     </ul>
 </body>
 </html>
