--- a/positionscompanyrecruiters_crud.html
+++ b/positionscompanyrecruiters_crud.html
@@ -85,7 +85,7 @@
     <p>&nbsp;</p>
 
     <!-- Select (Show) Positions and Recruiters-->
-    <h3>Browse Positions and Recruiters</h3>
+    <h3>Browse Position and Recruiter Affiliations</h3>
 
     <table>
       <!-- Table Head -->
