change text content of add recruiter button

--- a/positionscompanyrecruiters_crud.html
+++ b/positionscompanyrecruiters_crud.html
@@ -301,7 +301,7 @@
           <label for="lastContacted">Last Contacted</label> <input type="date" name="lastContacted" />
           <label for="details">Details</label> <input type="text" name="details" />
         </fieldset>
-        <button type="submit">Add Position and Recruiter</button>
+        <button type="submit">Add Recruiter</button>
         <button id="add-cancel">Cancel</button>
       </form>
 
