Fixed typo in Recruiter form

--- a/positionscompanyrecruiters_crud.html
+++ b/positionscompanyrecruiters_crud.html
@@ -349,7 +349,7 @@
           <label for="details">Details</label> 
           <input type="text" name="details" value="Met at OSU Career Fair"/>
         </fieldset>
-        <button type="submit">Update Position</button>
+        <button type="submit">Update Recruiter</button>
         <button id="update-cancel">Cancel</button>
       </form>
 
