Updated index with CRUD functionalities for each page

--- a/index.html
+++ b/index.html
@@ -31,11 +31,15 @@
     </p>
 
     <h3>Pages/Entities</h3>
+    <p>Applicants, Applications, and Companies entities have full CRUD functionality - SELECT, INSERT, UPDATE, DELETE.</p>
+    <p>Positions and CompanyRecruiters entities have partial CRUD functionality - SELECT, INSERT, UPDATE.</p>
+    <p>PositionsCompanyRecruiters intersection table has partial CRUD functionality - SELECT, INSERT, DELETE.</p>
     <ul>
         <li><strong>Applicants</strong> - records the personal details of each Applicant.</li>
         <li><strong>Applications</strong> - records the details of every Application Applicants use to apply to specific Positions.</li>
         <li><strong>Companies</strong> - records the details of each Company Applicants apply to.</li>
-        <li><strong>Positions & Company Recruiters</strong> - records the details of Positions/job postings Applicants apply to. Also records the personal details of each Company Recruiter and what Positions they recruit for.</li>
+        <li><strong>Positions & Company Recruiters</strong> - records the details of Positions/job postings Applicants apply to. Also records the personal details of each 
+            Company Recruiter and what Positions they recruit for.</li>
     </ul>
 </body>
 </html>
