change position input to dropdown

--- a/applications_crud.html
+++ b/applications_crud.html
@@ -132,7 +132,13 @@
             <option value="004">John Seward</option>
             <option value="005">Xochit Lowe</option>
           </select>
-          <label for="position">Position</label> <input type="text" name="position" />
+          <select name="positions" id="positions">
+            <option value="200" selected>Software Engineer Inter</option>
+            <option value="201">Application Developer</option>
+            <option value="202">New Grad SWE</option>
+            <option value="203">Data Engineer Intern</option>
+            <option value="204">Database Administrator</option>
+          </select>
           <label for="dateApplied">Date Applied</label> <input type="date" name="dateApplied" value="" />
         </fieldset>
         <button type="submit">Add Application</button>
