--- a/applications_crud.html
+++ b/applications_crud.html
@@ -104,7 +104,8 @@
             <h4>Optional: </h3>
             <label for="positions">Position</label>
             <select name="positions" id="positions">
-                <option value="200" selected>Software Engineer Intern</option>
+                <option value="" selected></option>
+                <option value="200">Software Engineer Intern</option>
                 <option value="201">Application Developer</option>
                 <option value="202">New Grad SWE</option>
                 <option value="203">Data Engineer Intern</option>
@@ -112,7 +113,8 @@
             </select>
             <label for="companies">Company</label>
             <select name="companies" id="companies">
-                <option value="100" selected>Aptiv</option>
+                <option value="" selected></option>
+                <option value="100">Aptiv</option>
                 <option value="101">Garmin</option>
                 <option value="102">Apple</option>
             </select>
