fix typo in positions dropdown

--- a/applications_crud.html
+++ b/applications_crud.html
@@ -135,7 +135,7 @@
             <option value="005">Xochit Lowe</option>
           </select>
           <select name="positions" id="positions">
-            <option value="200" selected>Software Engineer Inter</option>
+            <option value="200" selected>Software Engineer Intern</option>
             <option value="201">Application Developer</option>
             <option value="202">New Grad SWE</option>
             <option value="203">Data Engineer Intern</option>
