--- a/applications_crud.html
+++ b/applications_crud.html
@@ -134,6 +134,7 @@
             <option value="004">John Seward</option>
             <option value="005">Xochit Lowe</option>
           </select>
+          <label for="positions">Position</label>
           <select name="positions" id="positions">
             <option value="200" selected>Software Engineer Intern</option>
             <option value="201">Application Developer</option>
